static/psi4manual/1.1.0/_sources/autodoc_testsuite_corepsi4.rst.txt

=============================================   ============
Input File                                      Description 
=============================================   ============
:srcsample:`mp2p5-grad2`                        MP2.5 cc-pVDZ gradient for the NO radical
:srcsample:`cc46`                               EOM-CC2/cc-pVDZ on H2O2 with two excited states in each irrep
:srcsample:`opt11`                              Transition-state optimizations of HOOH to both torsional transition states.
:srcsample:`dfomp2p5-grad1`                     DF-OMP2.5 cc-pVDZ gradients for the H2O molecule.
:srcsample:`dfmp2-grad4`                        DF-MP2 cc-pVDZ gradient for the NO molecule.
:srcsample:`cc40`                               RHF-CC2-LR/cc-pVDZ optical rotation of H2O2.  gauge = length, omega = (589 355 nm)
:srcsample:`cc25`                               Single point gradient of 1-2B2 state of H2O+ with EOM-CCSD
:srcsample:`casscf-sp`                          CASSCF/6-31G** energy point
:srcsample:`cc13`                               UHF-CCSD/cc-pVDZ :math:`^{3}B_1` CH2 geometry optimization via analytic gradients
:srcsample:`omp3-5`                             SOS-OMP3 cc-pVDZ geometry optimization for the H2O molecule.
:srcsample:`dcft-grad4`                         Unrestricted DF-DCFT ODC-12 gradient for O2 with cc-pVTZ/cc-pVTZ-RI standard/auxiliary basis set
:srcsample:`fd-freq-gradient`                   STO-3G frequencies for H2O by finite-differences of gradients
:srcsample:`ocepa-grad2`                        OCEPA cc-pVDZ gradient for the NO radical
:srcsample:`dfscf-bz2`                          Benzene Dimer DF-HF/cc-pVDZ
:srcsample:`isapt1`                             This test case shows an example of running and analyzing an FI-SAPT0/jun-cc-pvdz computation for 2,4-pentanediol (targeting the intramolecular hydrogen bond between the two hydroxyl groups)
:srcsample:`dfmp2-2`                            Density fitted MP2 energy of H2, using density fitted reference and automatic looping over cc-pVDZ and cc-pVTZ basis sets. Results are tabulated using the built in table functions by using the default options and by specifiying the format.
:srcsample:`cc8a`                               ROHF-CCSD(T) cc-pVDZ frozen-core energy for the :math:`^2\Sigma^+` state of the CN radical, with Cartesian input.
:srcsample:`cbs-xtpl-gradient`                  Various gradients for a strained helium dimer and water molecule
:srcsample:`cbs-xtpl-opt`                       Various extrapolated optimization methods for the H2 molecule
:srcsample:`ci-multi`                           BH single points, checking that program can run multiple instances of  DETCI in a single input, without an intervening clean() call
:srcsample:`fd-freq-gradient-large`             SCF DZ finite difference frequencies by energies for C4NH4
:srcsample:`cisd-h2o+-0`                        6-31G** H2O+ Test CISD Energy Point
:srcsample:`psimrcc-ccsd\_t-4`                  Mk-MRCCSD(T) single point. :math:`^1A_1` O$_3` state described using the Ms = 0 component of the singlet.  Uses TCSCF orbitals.
:srcsample:`mp2-grad1`                          MP2 cc-pVDZ gradient for the H2O molecule.
:srcsample:`omp3-grad2`                         OMP3 cc-pVDZ gradient for the NO radical
:srcsample:`fsapt1`                             This test case shows an example of running and analyzing a standard F-SAPT0/jun-cc-pvdz procedure for phenol dimer from the S22 database.
:srcsample:`extern1`                            External potential calculation involving a TIP3P water and a QM water. Finite different test of the gradient is performed to validate forces.
:srcsample:`cisd-h2o+-2`                        6-31G** H2O+ Test CISD Energy Point
:srcsample:`sapt1`                              SAPT0 cc-pVDZ computation of the ethene-ethyne interaction energy, using the cc-pVDZ-JKFIT RI basis for SCF and cc-pVDZ-RI for SAPT.  Monomer geometries are specified using Cartesian coordinates.
:srcsample:`cc52`                               CCSD Response for H2O2
:srcsample:`decontract`                         RHF/cc-pvdz-decontract HCl single-point energy  Testing the in line -decontract option for basis sets
:srcsample:`cc55`                               EOM-CCSD/6-31g excited state transition data for water with two excited states per irrep
:srcsample:`dft-b2plyp`                         Double-hybrid density functional B2PYLP. Reproduces portion of Table I in S. Grimme's J. Chem. Phys 124 034108 (2006) paper defining the functional.
:srcsample:`stability2`                         ROHF stability analysis check for CN with cc-pVDZ. This test corresponds to the rohf-stab test from Psi3.
:srcsample:`psimrcc-ccsd\_t-1`                  Mk-MRCCSD(T) single point. :math:`^1A_1` CH2 state described using the Ms = 0 component of the singlet.  Uses RHF singlet orbitals.
:srcsample:`cc44`                               Test case for some of the PSI4 out-of-core codes.  The code is given only 2.0 MB of memory, which is insufficient to hold either the A1 or B2 blocks of an ovvv quantity in-core, but is sufficient to hold at least two copies of an oovv quantity in-core.
:srcsample:`soscf2`                             Triple and Singlet Oxygen energy SOSCF, also tests non-symmetric density matrices
:srcsample:`psithon2`                           Accesses basis sets, databases, plugins, and executables in non-install locations
:srcsample:`dft1-alt`                           DFT Functional Test
:srcsample:`dfccdl1`                            DF-CCDL cc-pVDZ energy for the H2O molecule.
:srcsample:`sapt5`                              SAPT0 aug-cc-pVTZ computation of the charge transfer energy of the water dimer.
:srcsample:`dcft3`                              DC-06 calculation for the He dimer. This performs a simultaneous update of the orbitals and cumulant, using DIIS extrapolation. Four-virtual integrals are handled in the AO Basis, using integrals stored on disk.
:srcsample:`mp2-def2`                           Test case for Binding Energy of C4H5N (Pyrrole) with CO2 using MP2/def2-TZVPP 
:srcsample:`dcft-grad3`                         Restricted DF-DCFT ODC-12 gradient for ethylene with cc-pVDZ/cc-pVDZ-RI standard/auxiliary basis set
:srcsample:`cepa0-grad1`                        CEPA0 cc-pVDZ gradient for the H2O molecule.
:srcsample:`mp3-grad1`                          MP3 cc-pVDZ gradient for the H2O molecule.
:srcsample:`nbody-he-cluster`                   MP2/aug-cc-pv[DT]Z many body energies of an arbitrary Helium complex Size vs cost tradeoff is rough here
:srcsample:`cc13d`                              Tests analytic CC2 gradients
:srcsample:`scf5`                               Test of all different algorithms and reference types for SCF, on singlet and triplet O2, using the cc-pVTZ basis set.
:srcsample:`omp2-3`                             OMP2 cc-pVDZ energy for the NO radical
:srcsample:`scf2`                               RI-SCF cc-pVTZ energy of water, with Z-matrix input and cc-pVTZ-RI auxilliary basis.
:srcsample:`cc36`                               CC2(RHF)/cc-pVDZ energy of H2O.
:srcsample:`mints3`                             Test individual integral objects for correctness.
:srcsample:`options1`                           check all variety of options parsing
:srcsample:`cc5a`                               RHF CCSD(T) STO-3G frozen-core energy of C4NH4 Anion
:srcsample:`omp2-1`                             OMP2 cc-pVDZ energy for the H2O molecule.
:srcsample:`cc19`                               CCSD/cc-pVDZ dipole polarizability at two frequencies
:srcsample:`ocepa-grad1`                        OCEPA cc-pVDZ gradient for the H2O molecule.
:srcsample:`dfccsdat1`                          DF-CCSD(AT) cc-pVDZ energy for the H2O molecule.
:srcsample:`dcft4`                              DCFT calculation for the HF+ using DC-06 functional. This performs both two-step and simultaneous update of the orbitals and cumulant using DIIS extrapolation. Four-virtual integrals are first handled in the MO Basis for the first two energy computations. In the next two the ao_basis=disk algorithm is used, where the transformation of integrals for  four-virtual case is avoided.  The computation is then repeated using the DC-12 functional with the same algorithms.
:srcsample:`mp2-module`                         OMP2 cc-pVDZ energy for the H2O molecule.
:srcsample:`cc28`                               CCSD/cc-pVDZ optical rotation calculation (length gauge only) on Z-mat H2O2
:srcsample:`fnocc1`                             Test QCISD(T) for H2O/cc-pvdz Energy
:srcsample:`dfccd1`                             DF-CCD cc-pVDZ energy for the H2O molecule.
:srcsample:`opt2-fd`                            SCF DZ allene geometry optimzation, with Cartesian input
:srcsample:`dfomp2-2`                           OMP2 cc-pVDZ energy for the NO molecule.
:srcsample:`dcft6`                              DCFT calculation for the triplet O2 using DC-06, DC-12 and CEPA0 functionals.  Only two-step algorithm is tested.
:srcsample:`omp3-grad1`                         OMP3 cc-pVDZ gradient for the H2O molecule.
:srcsample:`pywrap-freq-g-sowreap`              Finite difference of gradients frequency, run in sow/reap mode.
:srcsample:`cc48`                               reproduces dipole moments in J.F. Stanton's "biorthogonal" JCP paper
:srcsample:`dfccd-grad1`                        DF-CCSD cc-pVDZ gradients for the H2O molecule.
:srcsample:`mints9`                             A test of the basis specification.  Various basis sets are specified outright and in blocks, both orbital and auxiliary. Constructs libmints BasisSet objects through the constructor that calls qcdb.BasisSet infrastructure. Checks that the resulting bases are of the right size and checks that symmetry of the Molecule observes the basis assignment to atoms.
:srcsample:`cc31`                               CCSD/sto-3g optical rotation calculation (both gauges) at two frequencies on methyloxirane
:srcsample:`cisd-sp-2`                          6-31G** H2O Test CISD Energy Point
:srcsample:`opt1`                               SCF STO-3G geometry optimzation, with Z-matrix input
:srcsample:`adc1`                               ADC/6-31G** on H2O
:srcsample:`mp2-grad2`                          MP2 cc-pVDZ gradient for the NO radical
:srcsample:`dfccsd-grad1`                       DF-CCSD cc-pVDZ gradients for the H2O molecule.
:srcsample:`dft3`                               DFT integral algorithms test, performing w-B97 RKS and UKS computations on water and its cation, using all of the different integral algorithms.  This tests both the ERI and ERF integrals.
:srcsample:`cc8`                                UHF-CCSD(T) cc-pVDZ frozen-core energy for the :math:`^2\Sigma^+` state of the CN radical, with Z-matrix input.
:srcsample:`mp3-grad2`                          MP3 cc-pVDZ gradient for the NO radical
:srcsample:`scf6`                               Tests RHF/ROHF/UHF SCF gradients
:srcsample:`cc4`                                RHF-CCSD(T) cc-pVQZ frozen-core energy of the BH molecule, with Cartesian input. After the computation, the checkpoint file is renamed, using the PSIO handler.
:srcsample:`pywrap-opt-sowreap`                 Finite difference optimization, run in sow/reap mode.
:srcsample:`cc47`                               EOM-CCSD/cc-pVDZ on H2O2 with two excited states in each irrep
:srcsample:`dcft-grad2`                         RHF-ODC-12 analytic gradient computations for H2O use AO_BASIS=DISK and AO_BASIS=NONE, respectively.  RHF-ODC-06 analytic gradient computations for H2O use AO_BASIS=DISK and AO_BASIS=NONE, respectively. 
:srcsample:`fsapt2`                             A very quick correctness test of F-SAPT (see fsapt1 for a real example)
:srcsample:`cepa3`                              cc-pvdz H2O Test coupled-pair CISD against DETCI CISD
:srcsample:`cc32`                               CC3/cc-pVDZ H2O :math:`R_e` geom from Olsen et al., JCP 104, 8007 (1996)
:srcsample:`scf-hess1`                          RHF STO-3G (Cartesian) and cc-pVDZ (spherical) water Hessian test, against Psi3 reference values.
:srcsample:`ocepa-freq1`                        OCEPA cc-pVDZ freqs for C2H2
:srcsample:`dfccsdt1`                           DF-CCSD(T) cc-pVDZ energy for the H2O molecule.
:srcsample:`pywrap-db2`                         Database calculation, run in sow/reap mode.
:srcsample:`sad1`                               Test of the superposition of atomic densities (SAD) guess, using a highly distorted water geometry with a cc-pVDZ basis set.  This is just a test of the code and the user need only specify guess=sad to the SCF module's (or global) options in order to use a SAD guess. The test is first performed in C2v symmetry, and then in C1.
:srcsample:`dft-psivar`                         HF and DFT variants single-points on zmat methane, mostly to test that    PSI variables are set and computed correctly.   Now also testing that CSX harvesting PSI variables correctly
:srcsample:`ocepa2`                             OCEPA cc-pVDZ energy with B3LYP initial guess for the NO radical
:srcsample:`dcft5`                              DC-06 calculation for the O2 molecule (triplet ground state). This performs  geometry optimization using two-step and simultaneous solution of the  response equations for the analytic gradient.
:srcsample:`opt-irc-1`                          Compute the IRC for HOOH torsional rotation at the RHF/DZP level of theory. 
:srcsample:`dcft2`                              DC-06 calculation for the He dimer. This performs a two-step update of the orbitals and cumulant, using DIIS extrapolation. Four-virtual integrals are handled in the MO Basis.
:srcsample:`fci-tdm-2`                          BH-H2+ FCI/cc-pVDZ Transition Dipole Moment
:srcsample:`dfcasscf-fzc-sp`                    CASSCF/6-31G** energy point
:srcsample:`cepa2`                              cc-pvdz H2O Test ACPF Energy/Properties
:srcsample:`cc24`                               Single point gradient of 1-2B1 state of H2O+ with EOM-CCSD
:srcsample:`castup1`                            Test of SAD/Cast-up (mainly not dying due to file weirdness)
:srcsample:`dfomp3-grad1`                       DF-OMP3 cc-pVDZ gradients for the H2O molecule.
:srcsample:`pywrap-alias`                       Test parsed and exotic calls to energy() like zapt4, mp2.5, and cisd are working
:srcsample:`fci-dipole`                         6-31G H2O Test FCI Energy Point
:srcsample:`cc2`                                6-31G** H2O CCSD optimization by energies, with Z-Matrix input
:srcsample:`dft1`                               DFT Functional Test
:srcsample:`cc11`                               Frozen-core CCSD(ROHF)/cc-pVDZ on CN radical with disk-based AO algorithm
:srcsample:`pywrap-cbs1`                        Various basis set extrapolation tests
:srcsample:`dft-grad`                           DF-BP86-D2 cc-pVDZ frozen core gradient of S22 HCN
:srcsample:`x2c3`                               Test of SFX2C-1e on Water uncontracted cc-pVDZ The reference numbers are from Lan Cheng's implementation in Cfour
:srcsample:`cubeprop-esp`                       RHF orbitals and density for water.
:srcsample:`cc49`                               EOM-CC3(UHF) on CH radical with user-specified basis and properties for particular root
:srcsample:`opt-multi-dimer-c1`                 Multi-fragment opt of C2h methane dimer with user-combined reference points.
:srcsample:`pywrap-checkrun-uhf`                This checks that all energy methods can run with a minimal input and set symmetry.
:srcsample:`cc13c`                              Tests RHF CCSD(T)gradients
:srcsample:`mom`                                Maximum Overlap Method (MOM) Test. MOM is designed to stabilize SCF convergence and to target excited Slater determinants directly.
:srcsample:`zaptn-nh2`                          ZAPT(n)/6-31G NH2 Energy Point, with n=2-25
:srcsample:`omp2-grad1`                         OMP2 cc-pVDZ gradient for the H2O molecule.
:srcsample:`pywrap-checkrun-convcrit`           Advanced python example sets different sets of scf/post-scf conv crit and check to be sure computation has actually converged to the expected accuracy.
:srcsample:`dfrasscf-sp`                        6-31G** H2O Test RASSCF Energy Point will default to only singles and doubles in the active space
:srcsample:`ao-casscf-sp`                       CASSCF/6-31G** energy point
:srcsample:`tu2-ch2-energy`                     Sample UHF/6-31G** CH2 computation
:srcsample:`opt13`                              B3LYP cc-pVDZ geometry optimzation of phenylacetylene, starting from not quite linear structure
:srcsample:`dft-b3lyp`                          Check flavors of B3LYP (b3lyp3/b3lyp5) against other programs
:srcsample:`dfomp2-grad1`                       DF-OMP2 cc-pVDZ gradients for the H2O molecule.
:srcsample:`psimrcc-fd-freq1`                   Mk-MRCCSD single point. :math:`^3 \Sigma ^-` O2 state described using the Ms = 0 component of the triplet.  Uses ROHF triplet orbitals.
:srcsample:`cbs-xtpl-energy`                    Extrapolated water energies
:srcsample:`soscf1`                             Second-order SCF convergnece: Benzene
:srcsample:`mints6`                             Patch of a glycine with a methyl group, to make alanine, then DF-SCF  energy calculation with the cc-pVDZ basis set
:srcsample:`isapt2`                             This is a shorter version if isapt1 - does not do cube plots. See isapt1 for full details
:srcsample:`casscf-sa-sp`                       Example of state-averaged CASSCF for the C2 molecule see C. D. Sherrill and P. Piecuch, J. Chem. Phys. 122, 124104 (2005)
:srcsample:`cbs-xtpl-wrapper`                   RHF aug-cc-pVQZ energy for the BH molecule, with Cartesian input. Various gradients for a strained helium dimer and water molecule
:srcsample:`dfccsd1`                            DF-CCSD cc-pVDZ energy for the H2O molecule.
:srcsample:`cc13b`                              Tests RHF CCSD(T)gradients
:srcsample:`x2c1`                               Test of SFX2C-1e on water uncontracted cc-pVDZ-DK The reference numbers are from Lan Cheng's implementation in Cfour
:srcsample:`scf-property`                       UFH and B3LYP cc-pVQZ properties for the CH2 molecule.
:srcsample:`dfomp2p5-2`                         DF-OMP2.5 cc-pVDZ energy for the H2O+ cation
:srcsample:`opt14`                              6-31G(d) optimization of SF4 starting from linear bond angle that is not linear in the optimized structure but is in a  symmetry plane of the molecule.
:srcsample:`dcft-grad1`                         DCFT DC-06 gradient for the O2 molecule with cc-pVDZ basis set
:srcsample:`pywrap-checkrun-rhf`                This checks that all energy methods can run with a minimal input and set symmetry.
:srcsample:`opt5`                               6-31G** UHF CH2 3B1 optimization.  Uses a Z-Matrix with dummy atoms, just for demo and testing purposes.
:srcsample:`cc53`                               Matches Table II a-CCSD(T)/cc-pVDZ H2O @ 2.5 * Re value from Crawford and Stanton,  IJQC 98, 601-611 (1998).
:srcsample:`dfomp3-1`                           DF-OMP3 cc-pVDZ energy for the H2O molecule.
:srcsample:`psithon1`                           Spectroscopic constants of H2, and the full ci cc-pVTZ level of theory
:srcsample:`tu5-sapt`                           Example SAPT computation for ethene*ethine (i.e., ethylene*acetylene), test case 16 from the S22 database
:srcsample:`cc39`                               RHF-CC2-LR/cc-pVDZ dynamic polarizabilities of HOF molecule.
:srcsample:`cc18`                               RHF-CCSD-LR/cc-pVDZ static polarizability of HOF
:srcsample:`dfomp2-1`                           OMP2 cc-pVDZ energy for the H2O molecule.
:srcsample:`cc35`                               CC3(ROHF)/cc-pVDZ H2O :math:`R_e` geom from Olsen et al., JCP 104, 8007 (1996)
:srcsample:`fd-freq-energy-large`               SCF DZ finite difference frequencies by energies for C4NH4
:srcsample:`dfomp2-grad2`                       OMP2 cc-pVDZ energy for the NO molecule.
:srcsample:`cc1`                                RHF-CCSD 6-31G** all-electron optimization of the H2O molecule
:srcsample:`psimrcc-sp1`                        Mk-MRCCSD single point. :math:`^3 \Sigma ^-` O2 state described using the Ms = 0 component of the triplet.  Uses ROHF triplet orbitals.
:srcsample:`castup2`                            SCF with various combinations of pk/density-fitting, castup/no-castup, and spherical/cartesian settings. Demonstrates that puream setting is getting set by orbital basis for all df/castup parts of calc. Demonstrates that answer doesn't depend on presence/absence of castup. Demonstrates (by comparison to castup3) that output file doesn't depend on options (scf_type) being set global or local. This input uses global.
:srcsample:`cc10`                               ROHF-CCSD cc-pVDZ energy for the :math:`^2\Sigma^+` state of the CN radical
:srcsample:`opt-freeze-coords`                  SCF/cc-pVDZ optimization example with frozen cartesian
:srcsample:`cc27`                               Single point gradient of 1-1B2 state of H2O with EOM-CCSD
:srcsample:`mpn-bh`                             MP(n)/aug-cc-pVDZ BH Energy Point, with n=2-19.  Compare against  M. L. Leininger et al., J. Chem. Phys. 112, 9213 (2000)
:srcsample:`cbs-delta-energy`                   Extrapolated energies with delta correction
:srcsample:`omp2-5`                             SOS-OMP2 cc-pVDZ geometry optimization for the H2O molecule.
:srcsample:`scf-freq1`                          Analytic vs. finite difference DF-SCF frequency test for water.
:srcsample:`cc22`                               ROHF-EOM-CCSD/DZ on the lowest two states of each irrep in :math:`^{3}B_1` CH2.
:srcsample:`cc14`                               ROHF-CCSD/cc-pVDZ :math:`^{3}B_1` CH2 geometry optimization via analytic gradients
:srcsample:`mp2-1`                              All-electron MP2 6-31G** geometry optimization of water
:srcsample:`cepa1`                              cc-pvdz H2O Test CEPA(1) Energy
:srcsample:`casscf-fzc-sp`                      CASSCF/6-31G** energy point
:srcsample:`extern2`                            External potential calculation involving a TIP3P water and a QM water for DFMP2. Finite different test of the gradient is performed to validate forces.
:srcsample:`opt9`                               Various constrained energy minimizations of HOOH with cc-pvdz RHF. Cartesian-coordinate constrained optimizations of HOOH in internals.
:srcsample:`cc9a`                               ROHF-CCSD(T) cc-pVDZ energy for the :math:`^2\Sigma^+` state of the CN radical,  with Z-matrix input.
:srcsample:`mints1`                             Symmetry tests for a range of molecules.  This doesn't actually compute any energies, but serves as an example of the many ways to specify geometries in Psi4.
:srcsample:`dfmp2-grad5`                        Tests DF-MP2 gradient in the presence of a dipole field
:srcsample:`pywrap-db3`                         Test that Python Molecule class processes geometry like psi4 Molecule class.
:srcsample:`cc16`                               ROHF and UHF-B-CCD(T)/cc-pVDZ :math:`^{3}B_1` CH2 single-point energy (fzc, MO-basis :math:`\langle ab|cd \rangle` )
:srcsample:`fci-h2o`                            6-31G H2O Test FCI Energy Point
:srcsample:`ocepa1`                             OCEPA cc-pVDZ energy for the H2O molecule.
:srcsample:`opt-multi-dimer-c2h`                Multi-fragment opt of C2h methane dimer with user-combined reference points.
:srcsample:`fd-freq-energy`                     SCF STO-3G finite-difference frequencies from energies
:srcsample:`cc30`                               CCSD/sto-3g optical rotation calculation (length gauge only) at two frequencies on methyloxirane
:srcsample:`numpy-array-interface`              Numpy interface testing
:srcsample:`ghosts`                             Density fitted MP2 cc-PVDZ/cc-pVDZ-RI computation of formic acid dimer binding energy using explicit specification of ghost atoms.  This is equivalent to the dfmp2_1 sample but uses both (equivalent) specifications of ghost atoms in a manual counterpoise correction.
:srcsample:`sapt3`                              SAPT2+3(CCD) aug-cc-pVDZ computation of the water dimer interaction energy,  using the aug-cc-pVDZ-JKFIT DF basis for SCF and aug-cc-pVDZ-RI for SAPT.
:srcsample:`mints4`                             A demonstration of mixed Cartesian/ZMatrix geometry specification, using variables, for the benzene-hydronium complex.  Atoms can be placed using ZMatrix coordinates, whether they belong to the same fragment or not.  Note that the Cartesian specification must come before the ZMatrix entries because the former define absolute positions, while the latter are relative.
:srcsample:`tu4-h2o-freq`                       Optimization followed by frequencies H2O HF/cc-pVDZ
:srcsample:`mp2p5-grad1`                        MP2.5 cc-pVDZ gradient for the H2O molecule.
:srcsample:`dfmp2-grad3`                        DF-MP2 cc-pVDZ gradients for the H2O molecule.
:srcsample:`dfomp2p5-1`                         DF-OMP2.5 cc-pVDZ energy for the H2O molecule.
:srcsample:`omp3-3`                             OMP3 cc-pVDZ energy with B3LYP initial guess for the NO radical
:srcsample:`dfomp3-2`                           DF-OMP3 cc-pVDZ energy for the H2O+ cation
:srcsample:`pubchem1`                           Benzene vertical singlet-triplet energy difference computation, using the PubChem database to obtain the initial geometry, which is optimized at the HF/STO-3G level, before computing single point energies at the RHF, UHF and ROHF levels of theory.
:srcsample:`opt2`                               SCF DZ allene geometry optimization, with Cartesian input, first in c2v symmetry, then in Cs symmetry from a starting point with a non-linear central bond angle.
:srcsample:`dfomp2-3`                           OMP2 cc-pVDZ energy for the H2O molecule.
:srcsample:`omp3-2`                             OMP3 cc-pVDZ energy with ROHF initial guess for the NO radical
:srcsample:`ocepa3`                             OCEPA cc-pVDZ energy with ROHF initial guess for the NO radical
:srcsample:`cisd-h2o+-1`                        6-31G** H2O+ Test CISD Energy Point
:srcsample:`mcscf1`                             ROHF 6-31G** energy of the :math:`^{3}B_1`  state of CH2, with Z-matrix input. The occupations are specified explicitly.
:srcsample:`dfomp2p5-grad2`                     DF-OMP2.5 cc-pVDZ gradients for the H2O+ cation.
:srcsample:`props3`                             DF-SCF cc-pVDZ multipole moments of benzene, up to 7th order and electrostatic potentials evaluated at the nuclear coordinates
:srcsample:`scf11-freq-from-energies`           Test frequencies by finite differences of energies for planar C4NH4 TS
:srcsample:`stability1`                         UHF->UHF stability analysis test for BH with cc-pVDZ Test direct SCF with and without symmetry, test PK without symmetry
:srcsample:`cc29`                               CCSD/cc-pVDZ optical rotation calculation (both gauges) on Cartesian H2O2
:srcsample:`ci-property`                        CI/MCSCF cc-pvDZ properties for Potassium nitrate (rocket fuel!)
:srcsample:`cc37`                               CC2(UHF)/cc-pVDZ energy of H2O+.
:srcsample:`sapt8`                              SAPT0(ROHF) open-shell computation of CN - Ne interaction energy First with jun-cc-pVDZ and density fitted integrals with ROHF Then with cc-pVDZ and direct integrals, except for dispersion  that is computed with cc-pVDZ-ri density fitting with ROHF.
:srcsample:`cc42`                               RHF-CC2-LR/STO-3G optical rotation of (S)-methyloxirane.  gauge = length, omega = (589 355 nm)
:srcsample:`opt-irc-2`                          Compute the IRC for HCN <-> NCH interconversion at the RHF/DZP level of theory.
:srcsample:`cc3`                                cc3: RHF-CCSD/6-31G** H2O geometry optimization and vibrational frequency analysis by finite-differences of gradients
:srcsample:`dft-freq`                           Frequencies for H2O B3LYP/6-31G* at optimized geometry
:srcsample:`cc23`                               ROHF-EOM-CCSD/DZ analytic gradient lowest :math:`^{2}B_1` state of H2O+ (A1 excitation)
:srcsample:`fnocc3`                             Test FNO-QCISD(T) computation
:srcsample:`scf3`                               File retention, docc, socc, and bond distances specified explicitly.
:srcsample:`adc2`                               ADC/aug-cc-pVDZ on two water molecules that are distant from 1000 angstroms from each other
:srcsample:`dfcasscf-sp`                        CASSCF/6-31G** energy point
:srcsample:`opt10`                              6-31G MP2 transition-state optimization with initial, computed Hessian.
:srcsample:`scf1`                               RHF cc-pVQZ energy for the BH molecule, with Cartesian input.
:srcsample:`pubchem2`                           Superficial test of PubChem interface
:srcsample:`omp2p5-1`                           OMP2 cc-pVDZ energy for the H2O molecule.
:srcsample:`ao-dfcasscf-sp`                     CASSCF/6-31G** energy point
:srcsample:`omp2-grad2`                         OMP2 cc-pVDZ gradient for the NO radical
:srcsample:`dcft7`                              DCFT calculation for the triplet O2 using ODC-06 and ODC-12 functionals.  Only simultaneous algorithm is tested.
:srcsample:`scf-guess-read1`                    Sample UHF/cc-pVDZ H2O computation on a doublet cation, using  RHF/cc-pVDZ orbitals for the closed-shell neutral as a guess
:srcsample:`cc43`                               RHF-CC2-LR/STO-3G optical rotation of (S)-methyloxirane.  gauge = both, omega = (589 355 nm)
:srcsample:`cc41`                               RHF-CC2-LR/cc-pVDZ optical rotation of H2O2.  gauge = both, omega = (589 355 nm)
:srcsample:`molden2`                            Test of the superposition of atomic densities (SAD) guess, using a highly distorted water geometry with a cc-pVDZ basis set.  This is just a test of the code and the user need only specify guess=sad to the SCF module's (or global) options in order to use a SAD guess. The test is first performed in C2v symmetry, and then in C1.
:srcsample:`dfcasscf-sa-sp`                     Example of state-averaged CASSCF for the C2 molecule
:srcsample:`dfomp3-grad2`                       DF-OMP3 cc-pVDZ gradients for the H2O+ cation.
:srcsample:`dfmp2-grad2`                        DF-MP2 cc-pVDZ gradient for the NO molecule.
:srcsample:`cc38`                               RHF-CC2-LR/cc-pVDZ static polarizabilities of HOF molecule.
:srcsample:`frac`                               Carbon/UHF Fractionally-Occupied SCF Test Case 
:srcsample:`cc34`                               RHF-CCSD/cc-pVDZ energy of H2O partitioned into pair energy contributions.
:srcsample:`sapt2`                              SAPT0 aug-cc-pVDZ computation of the benzene-methane interaction energy, using the aug-pVDZ-JKFIT DF basis for SCF, the aug-cc-pVDZ-RI DF basis for SAPT0 induction and dispersion, and the aug-pVDZ-JKFIT DF basis for SAPT0 electrostatics and induction. This example uses frozen core as well as asyncronous I/O while forming the DF integrals and CPHF coefficients.
:srcsample:`rasscf-sp`                          6-31G** H2O Test RASSCF Energy Point will default to only singles and doubles in the active space
:srcsample:`omp2p5-grad1`                       OMP2.5 cc-pVDZ gradient for the H2O molecule.
:srcsample:`cisd-sp`                            6-31G** H2O Test CISD Energy Point
:srcsample:`opt-multi-frozen-dimer-c2h`         Frozen-fragment opt of C2h methane dimer with user-combined reference points.
:srcsample:`dfmp2-4`                            conventional and density-fitting mp2 test of mp2 itself and setting scs-mp2
:srcsample:`cc54`                               CCSD dipole with user-specified basis set
:srcsample:`pywrap-db1`                         Database calculation, so no molecule section in input file. Portions of the full databases, restricted by subset keyword, are computed by sapt0 and dfmp2 methods.
:srcsample:`dfmp2-1`                            Density fitted MP2 cc-PVDZ/cc-pVDZ-RI computation of formic acid dimer binding energy using automatic counterpoise correction.  Monomers are specified using Cartesian coordinates.
:srcsample:`cc6`                                Frozen-core CCSD(T)/cc-pVDZ on C4H4N anion with disk ao algorithm
:srcsample:`dft-dldf`                           Dispersionless density functional (dlDF+D) internal match to Psi4 Extensive testing has been done to match supplemental info of Szalewicz et. al., Phys. Rev. Lett., 103, 263201 (2009) and Szalewicz et. al., J. Phys. Chem. Lett., 1, 550-555 (2010)
:srcsample:`dfccsdl1`                           DF-CCSDL cc-pVDZ energy for the H2O molecule.
:srcsample:`fci-h2o-2`                          6-31G H2O Test FCI Energy Point
:srcsample:`cdomp2-2`                           OMP2 cc-pVDZ energy for the NO molecule.
:srcsample:`cepa-module`                        routing check on lccd, lccsd, cepa(0).
:srcsample:`pywrap-basis`                       SAPT calculation on bimolecular complex where monomers are unspecified so driver auto-fragments it. Basis set and auxiliary basis sets are assigned by atom type.
:srcsample:`cc17`                               Single point energies of multiple excited states with EOM-CCSD
:srcsample:`castup3`                            SCF with various combinations of pk/density-fitting, castup/no-castup, and spherical/cartesian settings. Demonstrates that puream setting is getting set by orbital basis for all df/castup parts of calc. Demonstrates that answer doesn't depend on presence/absence of castup. Demonstrates (by comparison to castup2) that output file doesn't depend on options (scf_type) being set global or local. This input uses local.
:srcsample:`scf4`                               RHF cc-pVDZ energy for water, automatically scanning the symmetric stretch and bending coordinates using Python's built-in loop mechanisms.  The geometry is specified using a Z-matrix with variables that are updated during the potential energy surface scan, and then the same procedure is performed using polar coordinates, converted to Cartesian coordinates.
:srcsample:`cc15`                               RHF-B-CCD(T)/6-31G** H2O single-point energy (fzc, MO-basis :math:`\langle ab|cd \rangle`\ )
:srcsample:`fnocc2`                             Test G2 method for H2O
:srcsample:`opt4`                               SCF cc-pVTZ geometry optimzation, with Z-matrix input
:srcsample:`dfmp2-grad1`                        DF-MP2 cc-pVDZ gradients for the H2O molecule.
:srcsample:`props4`                             Electrostatic potential and electric field evaluated on a grid around water.
:srcsample:`psimrcc-ccsd\_t-2`                  Mk-MRCCSD(T) single point. :math:`^1A_1` CH2 state described using the Ms = 0 component of the singlet.  Uses RHF singlet orbitals.
:srcsample:`cbs-xtpl-freq`                      Various gradients for a strained helium dimer and water molecule
:srcsample:`cisd-h2o-clpse`                     6-31G** H2O Test CISD Energy Point with subspace collapse
:srcsample:`rasci-h2o`                          RASCI/6-31G** H2O Energy Point
:srcsample:`opt8`                               Various constrained energy minimizations of HOOH with cc-pvdz RHF. Cartesian-coordinate constrained optimizations of HOOH in Cartesians.
:srcsample:`opt6`                               Various constrained energy minimizations of HOOH with cc-pvdz RHF Internal-coordinate constraints in internal-coordinate optimizations.
:srcsample:`dfmp2-3`                            DF-MP2 cc-pVDZ frozen core gradient of benzene, computed at the DF-SCF cc-pVDZ geometry
:srcsample:`cdomp2-1`                           OMP2 cc-pVDZ energy for the H2O molecule.
:srcsample:`fsapt-diff1`                        This test case shows an example of running and analyzing a difference F-SAPT0/jun-cc-pvdz procedure for phenol dimer from the S22 database.
:srcsample:`freq-isotope`                       Vibrational and thermo analysis of several water isotopologs. Demonstrates Hessian reuse for different temperatures and pressures but not for different isotopologs.
:srcsample:`cc13a`                              UHF-CCSD(T)/cc-pVDZ :math:`^{3}B_1` CH2 geometry optimization via analytic gradients
:srcsample:`cc8c`                               ROHF-CCSD cc-pVDZ frozen-core energy for the :math:`^2\Sigma^+` state of the  CN radical, with Cartesian input.
:srcsample:`props1`                             RHF STO-3G dipole moment computation, performed by applying a finite electric field and numerical differentiation.
:srcsample:`cc45`                               RHF-EOM-CC2/cc-pVDZ lowest two states of each symmetry of H2O.
:srcsample:`fnocc4`                             Test FNO-DF-CCSD(T) energy
:srcsample:`tu3-h2o-opt`                        Optimize H2O HF/cc-pVDZ
:srcsample:`cc9`                                UHF-CCSD(T) cc-pVDZ frozen-core energy for the :math:`^2\Sigma^+` state of the CN radical, with Z-matrix input.
:srcsample:`mcscf3`                             RHF 6-31G** energy of water, using the MCSCF module and Z-matrix input.
:srcsample:`mints2`                             A test of the basis specification.  A benzene atom is defined using a ZMatrix containing dummy atoms and various basis sets are assigned to different atoms.  The symmetry of the molecule is automatically lowered to account for the different basis sets.
:srcsample:`dcft8`                              DCFT calculation for the NH3+ radical using the ODC-12 and ODC-13 functionals. This performs both simultaneous and QC update of the orbitals and cumulant using DIIS extrapolation. Four-virtual integrals are first handled in the MO Basis for the first two energy computations. In the next computation ao_basis=disk algorithm is used, where the transformation of integrals for  four-virtual case is avoided. 
:srcsample:`cc12`                               Single point energies of multiple excited states with EOM-CCSD
:srcsample:`dft2`                               DFT Functional Test
:srcsample:`cc8b`                               ROHF-CCSD cc-pVDZ frozen-core energy for the :math:`^2\Sigma^+` state of the  CN radical, with Cartesian input.
:srcsample:`pywrap-molecule`                    Check that C++ Molecule class and qcdb molecule class are reading molecule input strings identically
:srcsample:`opt1-fd`                            SCF STO-3G geometry optimzation, with Z-matrix input, by finite-differences
:srcsample:`x2c2`                               Test of SFX2C-1e on Water cc-pVDZ-DK.  In this test the Dirac equation is solved in the uncontracted cc-pVDZ-DK basis. The reference numbers are from Lan Cheng's implementation in Cfour
:srcsample:`cbs-xtpl-func`                      optimization with method defined via cbs
:srcsample:`cubeprop`                           RHF orbitals and density for water.
:srcsample:`omp3-1`                             OMP3 cc-pVDZ energy for the H2O molecule
:srcsample:`fd-gradient`                        SCF STO-3G finite-difference tests
:srcsample:`mints5`                             Tests to determine full point group symmetry.  Currently, these only matter for the rotational symmetry number in thermodynamic computations.
:srcsample:`sapt6`                              checks that all SAPT physical components (elst, exch, indc, disp) and total IE are being computed correctly for SAPT2+3(CCD)dMP2/aug-cc-pvdz and all lesser methods thereof.
:srcsample:`cc4a`                               RHF-CCSD(T) cc-pVQZ frozen-core energy of the BH molecule, with Cartesian input. This version tests the FROZEN_DOCC option explicitly
:srcsample:`matrix1`                            An example of using BLAS and LAPACK calls directly from the Psi input file, demonstrating matrix multiplication, eigendecomposition, Cholesky decomposition and LU decomposition. These operations are performed on vectors and matrices provided from the Psi library.
:srcsample:`mp2-property`                       MP2 cc-pvDZ properties for Nitrogen oxide
:srcsample:`pywrap-checkrun-rohf`               This checks that all energy methods can run with a minimal input and set symmetry.
:srcsample:`omp2p5-2`                           OMP2 cc-pVDZ energy for the H2O molecule.
:srcsample:`dcft1`                              DC-06, DC-12, ODC-06 and ODC-12 calculation for the He dimer. This performs a simultaneous update of the orbitals and cumulant, using DIIS extrapolation. Four-virtual integrals are handled in the MO Basis.
:srcsample:`opt7`                               Various constrained energy minimizations of HOOH with cc-pvdz RHF. For "fixed" coordinates, the final value is provided by the user.
:srcsample:`sapt4`                              SAPT2+(3) aug-cc-pVDZ computation of the formamide dimer interaction energy, using the aug-cc-pVDZ-JKFIT DF basis for SCF and aug-cc-pVDZ-RI  for SAPT. This example uses frozen core as well as MP2 natural orbital  approximations.
:srcsample:`cc26`                               Single-point gradient, analytic and via finite-differences of 2-1A1 state of H2O with EOM-CCSD
:srcsample:`scf-guess-read2`                    Test if the the guess read in the same basis converges. 
:srcsample:`dft-pbe0-2`                         Internal match to psi4, test to match to literature values in litref.in/litref.out
:srcsample:`gibbs`                              Test Gibbs free energies at 298 K of N2, H2O, and CH4.
:srcsample:`props2`                             DF-SCF cc-pVDZ of benzene-hydronium ion, scanning the dissociation coordinate with Python's built-in loop mechanism. The geometry is specified by a Z-matrix with dummy atoms, fixed parameters, updated parameters, and separate charge/multiplicity specifiers for each monomer. One-electron properties computed for dimer and one monomer.
:srcsample:`cc50`                               EOM-CC3(ROHF) on CH radical with user-specified basis and properties for particular root
:srcsample:`tu1-h2o-energy`                     Sample HF/cc-pVDZ H2O computation
:srcsample:`opt3`                               SCF cc-pVDZ geometry optimzation, with Z-matrix input
:srcsample:`psimrcc-pt2`                        Mk-MRPT2 single point. :math:`^1A_1` F2 state described using the Ms = 0 component of the singlet.  Uses TCSCF singlet orbitals.
:srcsample:`scf-bz2`                            Benzene Dimer Out-of-Core HF/cc-pVDZ
:srcsample:`cisd-opt-fd`                        H2O CISD/6-31G** Optimize Geometry by Energies
:srcsample:`rasci-ne`                           Ne atom RASCI/cc-pVQZ  Example of split-virtual CISD[TQ] from Sherrill and Schaefer, J. Phys. Chem. XXX This uses a "primary" virtual space 3s3p (RAS 2), a "secondary" virtual space 3d4s4p4d4f (RAS 3), and a "tertiary" virtual space consisting of the remaining virtuals.  First, an initial CISD computation is run to get the natural orbitals; this allows a meaningful partitioning of the virtual orbitals into groups of different importance.  Next, the RASCI is run.  The split-virtual CISD[TQ] takes all singles and doubles, and all triples and quadruples with no more than 2 electrons in the secondary virtual subspace (RAS 3).  If any electrons are present in the tertiary virtual subspace (RAS 4), then that excitation is only allowed if it is a single or double.
:srcsample:`dcft9`                              UHF-ODC-12 and RHF-ODC-12 single-point energy for H2O. This performs a simultaneous update of orbitals and cumulants, using DIIS extrapolation. Four-virtual integrals are handled in the AO basis, where integral transformation is avoided. In the next RHF-ODC-12 computation, AO_BASIS=NONE is used, where four-virtual integrals are transformed into MO basis.
:srcsample:`scf-occ`                            force occupations in scf
:srcsample:`scf7`                               Tests SCF gradient in the presence of a dipole field
:srcsample:`omp2-4`                             SCS-OMP2 cc-pVDZ geometry optimization for the H2O molecule.
:srcsample:`pywrap-all`                         Intercalls among python wrappers- database, cbs, optimize, energy, etc. Though each call below functions individually, running them all in sequence or mixing up the sequence is aspirational at present. Also aspirational is using the intended types of gradients.
:srcsample:`rasci-c2-active`                    6-31G* C2 Test RASCI Energy Point, testing two different ways of specifying the active space, either with the ACTIVE keyword, or with RAS1, RAS2, RESTRICTED_DOCC, and RESTRICTED_UOCC
:srcsample:`cc21`                               ROHF-EOM-CCSD/DZ analytic gradient lowest :math:`^{2}A_1` excited state of H2O+ (B1 excitation)
:srcsample:`omp3-4`                             SCS-OMP3 cc-pVDZ geometry optimization for the H2O molecule.
:srcsample:`dfomp2-4`                           OMP2 cc-pVDZ energy for the NO molecule.
:srcsample:`mcscf2`                             TCSCF cc-pVDZ  energy of asymmetrically displaced ozone, with Z-matrix input.
:srcsample:`omp2-2`                             OMP2 cc-pVDZ energy with ROHF initial guess orbitals for the NO radical
:srcsample:`cc33`                               CC3(UHF)/cc-pVDZ H2O :math:`R_e` geom from Olsen et al., JCP 104, 8007 (1996)
:srcsample:`pywrap-freq-e-sowreap`              Finite difference of energies frequency, run in sow/reap mode.
:srcsample:`cc51`                               EOM-CC3/cc-pVTZ on H2O
:srcsample:`opt12`                              SCF cc-pVDZ geometry optimzation of ketene, starting from bent structure
:srcsample:`molden1`                            Test of the superposition of atomic densities (SAD) guess, using a highly distorted water geometry with a cc-pVDZ basis set.  This is just a test of the code and the user need only specify guess=sad to the SCF module's (or global) options in order to use a SAD guess. The test is first performed in C2v symmetry, and then in C1.
:srcsample:`psimrcc-ccsd\_t-3`                  Mk-MRCCSD(T) single point. :math:`^1A_1` CH2 state described using the Ms = 0 component of the singlet.  Uses RHF singlet orbitals.
:srcsample:`cc5`                                RHF CCSD(T) aug-cc-pvtz frozen-core energy of C4NH4 Anion
:srcsample:`mints8`                             Patch of a glycine with a methyl group, to make alanine, then DF-SCF  energy calculation with the cc-pVDZ basis set
:srcsample:`psimrcc-fd-freq2`                   Mk-MRCCSD frequencies. :math:`^1A_1` O$_3` state described using the Ms = 0 component of the singlet.  Uses TCSCF orbitals.
:srcsample:`cepa0-grad2`                        CEPA cc-pVDZ gradient for the NO radical
:srcsample:`tu6-cp-ne2`                         Example potential energy surface scan and CP-correction for Ne2
:srcsample:`sapt7`                              SAPT0 open-shell computation of H2O-HO2 interaction energy First with cc-pVDZ and density fitted integrals with UHF Then with 6-31g and direct integrals, except for dispersion  that is computed with cc-pVDZ-ri density fitting with UHF.
:srcsample:`scf-bs`                             UHF and broken-symmetry UHF energy for molecular hydrogen.
:srcsample:`fci-tdm`                            He2+ FCI/cc-pVDZ Transition Dipole Moment
:srcsample:`omp2p5-grad2`                       OMP2.5 cc-pVDZ gradient for the NO radical
:srcsample:`fci-h2o-fzcv`                       6-31G H2O Test FCI Energy Point
=============================================   ============

